# forcer

./: Cargo.toml  build.rs
migration/src/: m20220101_000001_create_table.rs
proto/: auth.proto  blazer.proto  health.proto  message.proto
src/: config.rs  errors.rs  main.rs  state.rs
src/entity/: mod.rs  prelude.rs  user.rs
src/services/: account.rs
src/types/: message.rs
src/utils/: jwt.rs
