[package]
name = "forcer-api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.8"
dotenvy = "0.15.7"
prost = "0.13.5"
sea-orm = { version = "1.1.6", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["transport"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.0", features = ["v7"] }
migration = { path = "migration" }
jsonwebtoken = "9.3.1"
prost-types = "0.13.5"

[build-dependencies]
tonic-build = "0.12.3"
